--- a/FI.WebAtividadeEntrevista/WebAtividadeEntrevista.csproj
+++ b/FI.WebAtividadeEntrevista/WebAtividadeEntrevista.csproj
@@ -272,6 +272,7 @@
     <Content Include="Scripts\Clientes\FI.ListClientes.js" />
     <Content Include="Scripts\Clientes\FI.Clientes.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\Clientes\FI.Shared.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
