Arrumando procedures para a atualização de clientes e beneficiários de forma atômica

--- a/FI.AtividadeEntrevista/FI.AtividadeEntrevista.csproj
+++ b/FI.AtividadeEntrevista/FI.AtividadeEntrevista.csproj
@@ -78,6 +78,8 @@
     <Compile Include="BLL\BoCliente.cs" />
     <Compile Include="DAL\Beneficiarios\DaoBeneficiario.cs" />
     <Compile Include="DAL\Clientes\DaoCliente.cs" />
+    <Content Include="DAL\Beneficiarios\Procedures\FI_SP_AltBeneficiario.sql" />
+    <Content Include="DAL\Beneficiarios\Procedures\FI_SP_DelBeneficiario.sql" />
     <Content Include="DAL\Beneficiarios\Procedures\FI_SP_IncBeneficiario.sql">
       <SubType>Form</SubType>
     </Content>
