--- a/FI.AtividadeEntrevista/FI.AtividadeEntrevista.csproj
+++ b/FI.AtividadeEntrevista/FI.AtividadeEntrevista.csproj
@@ -88,7 +88,7 @@
     <Compile Include="DML\Beneficiario.cs" />
     <Compile Include="DML\Cliente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="DAL\Types\Types.sql" />
+    <EmbeddedResource Include="DAL\Types\BeneficiariosList.sql" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="DAL\Clientes\Procedures\FI_SP_PesqCliente.sql" />
